make sidebar fixed when scrolling and alignment fix

--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -16,6 +16,13 @@
 .side-bar {
   width: 23%;
   float: left;
+  position: fixed; 
+  z-index: 1; 
+  top: 0; 
+  right: 0;
+  padding-top: 300px;
+  padding-right: 30px;
+  overflow-x: hidden; 
 }
 
 .gmm-header {
